Isabelle NEWS -- history user-relevant changes
==============================================

New in this Isabelle version
----------------------------

*** General ***

* Sessions may be organized via 'chapter' specifications in the ROOT
file, which determines a two-level hierarchy of browser info.  The old
tree-like organization via implicit sub-session relation, with its
tendency towards erratic fluctuation of URLs, has been discontinued.
The default chapter is "Unsorted".  Potential INCOMPATIBILITY for HTML
presentation of theories.

* Discontinued obsolete 'uses' within theory header.  Note that
commands like 'ML_file' work without separate declaration of file
dependencies.  Minor INCOMPATIBILITY.

* Discontinued redundant 'use' command, which was superseded by
'ML_file' in Isabelle2013.  Minor INCOMPATIBILITY.


*** Prover IDE -- Isabelle/Scala/jEdit ***

* Dockable window "Timing" provides an overview of relevant command
timing information.

* Option to skip over proofs, using implicit 'sorry' internally.


*** Pure ***

* Target-sensitive commands 'interpretation' and 'sublocale'.
Particulary, 'interpretation' now allows for non-persistent
interpretation within "context ... begin ... end" blocks.
See "isar-ref" manual for details.

* Improved locales diagnostic command 'print_dependencies'.

* Discontinued obsolete 'axioms' command, which has been marked as
legacy since Isabelle2009-2.  INCOMPATIBILITY, use 'axiomatization'
instead, while observing its uniform scope for polymorphism.

* Discontinued empty name bindings in 'axiomatization'.
INCOMPATIBILITY.


*** HOL ***

* Nested case expressions are now translated in a separate check
  phase rather than during parsing. The data for case combinators
  is separated from the datatype package. The declaration attribute
  "case_translation" can be used to register new case combinators:

  declare [[case_translation case_combinator constructor1 ... constructorN]]
