@@ -553,7 +553,8 @@ end;
 (* theory setup *)
 
 val _ = Context.>> (Context.map_theory
- (register_config Ast.trace_raw #>
+ (register_config quick_and_dirty_raw #>
+  register_config Ast.trace_raw #>
   register_config Ast.stats_raw #>
   register_config Printer.show_brackets_raw #>
   register_config Printer.show_sorts_raw #>
