@@ -6,6 +6,12 @@ New in this Isabelle version
 
 *** General ***
 
+* Uniform management of "quick_and_dirty" as system option (see also
+"isabelle options"), configuration option within the context (see also
+Config.get in Isabelle/ML), and attribute in Isabelle/Isar.  Minor
+INCOMPATIBILITY, need to use more official Isabelle means to access
+quick_and_dirty, instead of historical poking into mutable reference.
+
 * Sessions may be organized via 'chapter' specifications in the ROOT
 file, which determines a two-level hierarchy of browser info.  The old
 tree-like organization via implicit sub-session relation, with its
